Fixed up reviews feed scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -172,23 +172,6 @@ body {
   margin-left: 40px;
 }
 
-.panel-feed {
-  overflow: scroll;
-  height: 400px;
-  max-width: 475px;
-  float: right;
-  margin-right: 22px;
-  display: inline-block;
-  background: #ffffff;
-  padding: 20px 20px 20px 20px;
-}
-
-.content-container {
-  min-height: 150px;
-  max-height: 150px;
-  
-}
-
 .book-feed-size {
   float: left;
   height: 125px;
@@ -197,9 +180,6 @@ body {
 
 }
 
-.panel-header {
-  background: white;
-}
 
 .profile-container {
   margin-left: 5px;
@@ -216,9 +196,51 @@ body {
   
 }
 
-.avatar-chatroom {
+
+ /////////////////////
+ 
+
+p {
+  font-family: arial;
+  line-height: 1.4;
+  margin: 0 0 .5em;
+}
+.scroll-bar-wrap {
+  width: 300px;
+  position: relative;
+  margin: 2em auto;
+  float: right;
+  margin-right: 50px;
   
-  height: 90px;
-  width: 90px;
-  
+}
+.scroll-box {
+  width: 100%;
+  height: 295px;
+  overflow-y: scroll;
+}
+.scroll-box::-webkit-scrollbar {
+  width: .4em; 
+}
+.scroll-box::-webkit-scrollbar,
+.scroll-box::-webkit-scrollbar-thumb {
+  overflow:visible;
+  border-radius: 4px;
+}
+.scroll-box::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,.2); 
+}
+.cover-bar {
+  position: absolute;
+  background: #fff;;
+  height: 100%;  
+  top: 0;
+  right: 0;
+  width: .4em;
+  -webkit-transition: all .5s;
+  opacity: 1;
+}
+/* MAGIC HAPPENS HERE */
+.scroll-bar-wrap:hover .cover-bar {
+   opacity: 0;
+  -webkit-transition: all .5s;
 }
